<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/track_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Track author" />

    <TextView
        android:id="@+id/track_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_artist"
        tools:text="Track title" />

    <ImageView
        android:id="@+id/track_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/cover"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_title"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/player_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/track_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/player_previous"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/previous_button"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_skip_previous_24"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            app:iconSize="48dp"
            app:iconGravity="textStart"
            android:padding="0dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            />

        <ImageButton
            android:id="@+id/player_play"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/play_button"

            android:scaleType="fitCenter"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.0"

            android:visibility="visible"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

        <ImageButton
            android:id="@+id/player_pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/pause_button"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_baseline_pause_24"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/player_next"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/next_button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_baseline_skip_next_24"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="9dp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/player_stop"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:contentDescription="@string/stop_button"
        android:elevation="5dp"
        android:minHeight="48dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/track_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_buttons"
        app:srcCompat="@drawable/ic_baseline_stop_24" />

    <LinearLayout
        android:id="@+id/player_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_cover">

        <TextView
            android:id="@+id/play_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="0:00" />

        <SeekBar
            android:id="@+id/play_seek_bar"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:max="1000"
            android:progress="0" />

        <TextView
            android:id="@+id/play_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="00:00" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="start|bottom"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_position"
        tools:text="logs" />


</androidx.constraintlayout.widget.ConstraintLayout>
